--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,13 +16,13 @@ python-multipart = "^0.0.6"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-dotenv = "^1.0.0"
-pydantic = "^2.5.0"
+pydantic = {extras = ["email"], version = "^2.5.0"}
 pydantic-settings = "^2.1.0"
+httpx = "^0.25.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
 pytest-asyncio = "^0.21.1"
-httpx = "^0.25.2"
 
 [build-system]
 requires = ["poetry-core"]
