--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,10 +15,12 @@ pymongo = "^4.6.0"
 python-multipart = "^0.0.6"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+bcrypt = "^4.0.1"
 python-dotenv = "^1.0.0"
 pydantic = {extras = ["email"], version = "^2.5.0"}
-pydantic-settings = "^2.1.0"
-httpx = "^0.25.2"
+        pydantic-settings = "^2.1.0"
+        httpx = "^0.25.2"
+        redis = "^5.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
